# perf_ui

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/examples/: custom.rs  custom_minimal.rs  settings.rs  simple.rs  specific_entries.rs
src/: entries.rs  entry.rs  lib.rs  ui.rs  utils.rs  widgets.rs
src/entries/: diagnostics.rs  render.rs  time.rs  window.rs
src/ui/: root.rs  widget.rs
src/widgets/: bar.rs
