[package]
name = "bevy_perf_ui"
version = "0.6.0"
authors = ["Ida 'Iyes', Oleks Pickle <22867443+olekspickle@users.noreply.github.com>"]
edition = "2024"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/olekspickle/bevy_perf_ui"
homepage = "https://github.com/olekspickle/bevy_perf_ui"
keywords = ["gamedev", "bevy"]
categories = ["game-engines"]
description = "Customizable Performance/Debug Overlay for Bevy UI"
exclude = ["assets/*", "screenshots/*"]

[features]
default = [ "entries", "widgets", "sysinfo", "chrono", "window" ]
# Enable the collection of built-in Perf UI Entries
entries = []
# Enable the collection of additional built-in Perf UI Widgets
widgets = []
sysinfo = ["bevy/sysinfo_plugin", "bevy/multi_threaded"]
window = ["bevy/bevy_window"]
# Enable optional `chrono` dependency for timezone support in the Clock entry
chrono = ["dep:chrono"]

[dependencies]
num-traits = "0.2.19"
bevy = { version = "0.18", default-features = false, features = ["bevy_log", "bevy_ui"] }
chrono = { version = "0.4.40", optional = true, default-features = false, features = ["clock"] }

[dev-dependencies]
bevy = "0.18"
